--- a/finalModule/finalModule/src/main/resources/templates/admin/statistical/sales_report_day.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/statistical/sales_report_day.html
@@ -206,7 +206,7 @@
             <div class="card text-white bg-danger">
                 <div class="card-body">
                     <h5 class="card-title"></h5>
-                    <a href="#" class="text-white">Chi tiết →</a>
+                    <a  id="orders-cancel-detail" href="#" class="text-white">Chi tiết →</a>
                 </div>
             </div>
         </div>
@@ -299,7 +299,8 @@
         function updateLinks(day, month, year) {
             document.getElementById("revenue-detail").href = `/Admin/statistical/revenue/detail?type=day&day=${day}&month=${month}&year=${year}`;
             document.getElementById("products-detail").href = `/Admin/statistical/products/detail?type=day&day=${day}&month=${month}&year=${year}`;
-            document.getElementById("orders-detail").href = `/Admin/statistical/orders/detail?type=day&day=${day}&month=${month}&year=${year}`;
+            document.getElementById("orders-detail").href = `/Admin/statistical/orders/detail?type=day&day=${day}&month=${month}&year=${year}&status=DELIVERED`;
+            document.getElementById("orders-cancel-detail").href = `/Admin/statistical/orders/detail?type=day&day=${day}&month=${month}&year=${year}&status=CANCELLED`;
         }
 
         function updateCharts(data) {
