--- a/finalModule/finalModule/src/main/resources/static/css/admin/fragments/footer.css
+++ b/finalModule/finalModule/src/main/resources/static/css/admin/fragments/footer.css
@@ -2,7 +2,7 @@
 .main-footer {
     background: #15161D;
     color: #fff;
-    padding: 5px 10px;
+    padding: 50px;
     position: relative;
     bottom: 0;
     left: 250px; /* Khi sidebar mở */
