--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listBrand.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
             <i class="fas fa-search"></i>
           </button>
         </form>
-        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addBrandModal">
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addBrandModal" sec:authorize="hasRole('ROLE_ADMIN')">
           <i class="fas fa-plus me-2"></i> Thêm Thương Hiệu
         </button>
       </div>
@@ -41,18 +41,20 @@
       <table class="table table-striped table-bordered">
         <thead class="table-dark">
         <tr>
-          <th width="40">
+          <!-- Hide checkbox column for non-admin roles -->
+          <th width="40" sec:authorize="hasRole('ROLE_ADMIN')">
             <input type="checkbox" id="selectAll" class="form-check-input">
           </th>
           <th width="60">STT</th>
           <th>Tên Thương Hiệu</th>
           <th>Xuất Xứ</th>
-          <th width="80">Thao tác</th>
+          <th width="80" sec:authorize="hasRole('ROLE_ADMIN')">Thao tác</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="brand, b : ${brands}">
-          <td class="text-center">
+          <!-- Hide checkbox column for non-admin roles -->
+          <td class="text-center" sec:authorize="hasRole('ROLE_ADMIN')">
             <div class="form-check">
               <input type="checkbox" class="form-check-input brandCheckbox" th:value="${brand.brandID}" th:id="'brandCheck-' + ${b.index}">
             </div>
@@ -60,7 +62,7 @@
           <td th:text="${b.index + 1}"></td>
           <td th:text="${brand.name}"></td>
           <td th:text="${brand.country}"></td>
-          <td class="text-center">
+          <td class="text-center" sec:authorize="hasRole('ROLE_ADMIN')">
             <button type="button" class="btn btn-warning editBrandBtn"
                     th:data-id="${brand.brandID}"
                     th:data-name="${brand.name}"
@@ -75,7 +77,8 @@
 
     <!-- Pagination and Delete Button Section -->
     <div class="d-flex justify-content-between align-items-center mt-4">
-      <button type="button" id="deleteBtn" class="btn btn-danger" title="Xóa" onclick="deleteSelectedBrand()">
+      <button type="button" id="deleteBtn" class="btn btn-danger" title="Xóa" onclick="deleteSelectedBrand()"
+              sec:authorize="hasRole('ROLE_ADMIN')">
         <i class="fas fa-trash-alt me-2"></i> Xóa thương hiệu
       </button>
       <nav aria-label="Page navigation">
@@ -85,7 +88,7 @@
             <a class="page-link"
                th:href="@{/Admin/brand-manager(page=0, keyword=${keyword})}"
                aria-label="First">
-              <span aria-hidden="true">&laquo;&laquo;</span>
+              <span aria-hidden="true">««</span>
             </a>
           </li>
 
@@ -94,7 +97,7 @@
             <a class="page-link"
                th:href="@{/Admin/brand-manager(page=${currentPage - 2}, keyword=${keyword})}"
                aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
+              <span aria-hidden="true">«</span>
             </a>
           </li>
 
@@ -109,7 +112,7 @@
             <a class="page-link"
                th:href="@{/Admin/brand-manager(page=${currentPage}, keyword=${keyword})}"
                aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
+              <span aria-hidden="true">»</span>
             </a>
           </li>
 
@@ -118,7 +121,7 @@
             <a class="page-link"
                th:href="@{/Admin/brand-manager(page=${totalPages - 1}, keyword=${keyword})}"
                aria-label="Last">
-              <span aria-hidden="true">&raquo;&raquo;</span>
+              <span aria-hidden="true">»»</span>
             </a>
           </li>
         </ul>
@@ -127,7 +130,8 @@
   </div>
 
   <!-- Modal Thêm Mới Thương Hiệu -->
-  <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addBrandModal" tabindex="-1" aria-labelledby="addBrandModalLabel" aria-hidden="true"
+       sec:authorize="hasRole('ROLE_ADMIN')">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -165,21 +169,19 @@
     </div>
   </div>
 
-
   <!-- Modal Chỉnh sửa Thương Hiệu -->
-  <div class="modal fade" id="editBrandModal" tabindex="-1">
+  <div class="modal fade" id="editBrandModal" tabindex="-1" sec:authorize="hasRole('ROLE_ADMIN')">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Chỉnh Sửa Thương Hiệu</h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
         </div>
-
         <div class="modal-body">
           <form id="editBrandForm" th:action="@{/Admin/brand-manager/edit}" method="post" th:object="${brand}">
             <input type="hidden" th:field="*{brandID}" id="editBrandId" />
             <div class="mb-3">
-              <label for="brandName" class="form-label">Tên Thương Hiệu</label>
+              <label for="editBrandName" class="form-label">Tên Thương Hiệu</label>
               <input type="text" class="form-control" id="editBrandName" name="name"
                      th:classappend="${#fields.hasErrors('name')} ? 'is-invalid' : ''"
                      th:value="*{name}" required>
@@ -205,9 +207,9 @@
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/deleteMultipleBrand.js}"></script>
-  <script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script th:src="@{/js/admin/brandValidation.js}"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript">
@@ -244,7 +246,6 @@
       }
     });
   });
-
 </script>
 </body>
 </html>
