--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -128,7 +128,7 @@
             </tr>
             </tbody>
         </table>
-        <button type="button" id="deleteBtn" class="btn btn-danger mt-2" style="display: none;" onclick="disableSelectedEmployees()">Xóa nhân viên</button>
+        <button type="button" id="deleteBtn" class="btn btn-danger mt-2" style="display: none;" onclick="disableSelectedEmployees()">Vô hiệu hóa nhân viên</button>
         <button type="button" id="activateBtn" class="btn btn-success mt-2" style="display: none;" onclick="activateSelectedEmployees()">Kích hoạt nhân viên</button>
 
         <!-- Phân trang -->
