--- a/finalModule/finalModule/src/main/resources/templates/admin/order/addOrder.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/order/addOrder.html
@@ -364,7 +364,7 @@
     </div>
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
-
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/order.js}"></script>
 <script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
