--- a/finalModule/finalModule/src/main/resources/templates/account.html
+++ b/finalModule/finalModule/src/main/resources/templates/account.html
@@ -166,7 +166,8 @@
 
 <!-- Footer Fragment -->
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
-
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
+<script th:src="@{/js/admin/layout.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 </body>
